--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
 </head>
 <body>
 
+    <!--================ Message pour recommencer le jeu ================-->
+
     <div id="recommencer">Appuyez sur "espace" pour recommencer</div>
 
+    <!--================ Message pour afficher le score ================-->
+
     <div id="score">0</div>
+
+    <!--================ Afficher le Canva du jeu ================-->
 
     <canvas id="canvas" width="300px" height="300px"></canvas>
 
